--- a/css/style.css
+++ b/css/style.css
@@ -9,34 +9,35 @@
     height: 30px;
     width: 30px;
     opacity: 0.5;
+	text-align:center;
 }
 
 .laser-leftTop {
     top: 25%;
     left: 20%;
-    border-top: solid #ffffff 5px;
-    border-left: solid #ffffff 5px;
+    border-top: solid #ffffff 10px;
+    border-left: solid #ffffff 10px;
 }
 
 .laser-leftBottom {
     bottom: 25%;
     left: 20%;
-    border-bottom: solid #ffffff 5px;
-    border-left: solid #ffffff 5px;
+    border-bottom: solid #ffffff 10px;
+    border-left: solid #ffffff 10px;
 }
 
 .laser-rightTop {
     top: 25%;
     right: 20%;
-    border-top: solid #ffffff 5px;
-    border-right: solid #ffffff 5px;
+    border-top: solid #ffffff 10px;
+    border-right: solid #ffffff 10px;
 }
 
 .laser-rightBottom {
     bottom: 25%;
     right: 20%;
-    border-bottom: solid #ffffff 5px;
-    border-right: solid #ffffff 5px;
+    border-bottom: solid #ffffff 10px;
+    border-right: solid #ffffff 10px;
 }
 
 #webcodecam-canvas {
