--- a/css/style.css
+++ b/css/style.css
@@ -8,36 +8,35 @@
     margin: 40px;
     height: 30px;
     width: 30px;
-    opacity: 0.5;
-	text-align:center;
+    /*opacity: 0.5;*/
 }
 
 .laser-leftTop {
     top: 25%;
     left: 20%;
-    border-top: solid #ffffff 10px;
-    border-left: solid #ffffff 10px;
+    border-top: solid #ffffff 20px;
+    border-left: solid #ffffff 20px;
 }
 
 .laser-leftBottom {
     bottom: 25%;
     left: 20%;
-    border-bottom: solid #ffffff 10px;
-    border-left: solid #ffffff 10px;
+    border-bottom: solid #ffffff 20px;
+    border-left: solid #ffffff 20px;
 }
 
 .laser-rightTop {
     top: 25%;
     right: 20%;
-    border-top: solid #ffffff 10px;
-    border-right: solid #ffffff 10px;
+    border-top: solid #ffffff 20px;
+    border-right: solid #ffffff 20px;
 }
 
 .laser-rightBottom {
     bottom: 25%;
     right: 20%;
-    border-bottom: solid #ffffff 10px;
-    border-right: solid #ffffff 10px;
+    border-bottom: solid #ffffff 20px;
+    border-right: solid #ffffff 20px;
 }
 
 #webcodecam-canvas {
